@@ -55,6 +55,7 @@ osd_lyrics_SOURCES = \
 	ol_player_moc.c \
 	ol_player_mpd.c \
 	ol_elapse_emulator.c \
+	ol_md5.c \
 	ol_utils.c \
 	ol_utils_dbus.c \
 	ol_utils_dcop.c \
